--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,22 +1,26 @@
-name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - dev  # veya istediğiniz branch
+      - dev  # Veya istediğin branch
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Kodu Checkout Et
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Docker Setup
-        uses: docker/setup-buildx-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-      - name: Docker Hub Login
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: network=host
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.hkbn }}
@@ -24,5 +28,4 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t hkbn/update.mapper:latest .
-          docker push hkbn/update.mapper:latest
+          docker buildx build --platform linux/amd64 -t hkbn/update.mapper:latest --push .
